# sluchanie

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
src/: config.py  main.py
src/base/: config.py  main.py
web/: README.md  env.example  run_back.sh  run_front.sh
web/backend/: alembic.ini  requirements.txt  reset_db.py
web/backend/alembic/: env.py
web/backend/alembic/versions/: 0f9c497c0041_add_is_admin_to_user_model.py  11ac284dafac_initial_migration.py  17e56194b7c3_add_cover_url_to_record_model.py  2e2300741627_add_rating_table.py  b568b0ac4f07_add_rym_url_to_record_model.py  c37436c6b6a3_update_record_ownership_model.py  fe1d983e09b1_initial_migration.py
web/backend/app/: __init__.py  api.py  auth.py  config.py  create_admin.py  crud.py  database.py  db_models.py  debug_auth.py  main.py  models.py  temp_add_column.py  utils.py
web/frontend/: package-lock.json  package.json
web/frontend/public/: manifest.json
web/frontend/src/: App.js  index.css
web/frontend/src/components/: AdminRoute.js  Layout.js  RatingEditDialog.js  RatingInput.js
web/frontend/src/pages/: AdminDashboard.js  AdminRecords.js  AdminSelections.js  AdminUsers.js  Dashboard.js  History.js  Login.js  RecordManagement.js  Register.js  Selection.js  Statistics.js
web/frontend/src/services/: ApiService.js  AuthService.js
